Change to postgres

--- a/config/database.yml
+++ b/config/database.yml
@@ -5,25 +5,26 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: twitter_fetch_dev
+  username: twitter_fetch
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: twitter_fetch_test
+  username: twitter_fetch
 
 production:
-  adapter: postgresql
-  encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  <<: *default
   database: twitter_fetch_prod
   username: twitter_fetch
   password: <%= ENV['TWITTER_FETCH_DATABASE_PASSWORD'] %>
