--- a/config/sidekiq_scheduler.yml
+++ b/config/sidekiq_scheduler.yml
@@ -1,5 +1,5 @@
 run_fetch_last_twitts:
-  cron: '0 0 * * * *'
+  cron: '0 * * * *'
   class: FetchTwittsWorker
   queue: default
   description: 'This Job will fetch the last 10 twitts'
